# DROID

./: .gitignore  CMakeLists.txt
exe/: CMakeLists.txt  droid.cpp  ont2dot.cpp  test_interface.cpp
include/ontology/: modinterface.h  node.h  olink.h  ontology.h  searchtree.h
shared/: CMakeLists.txt  interface.ont  interface2.ont  new_ontology.ont
src/: CMakeLists.txt  modinterface.cpp  node.cpp  olink.cpp  ontology.cpp  searchtree.cpp
